--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @import "bootstrap/dist/css/bootstrap.css";
 :root{
   --page-bg-color: #ede7e7;
-  --todo-done-bg-color: #f6e5e5;
+  --todo-done-bg-color: #faeeee;
 }
 body{
   background-color: var(--page-bg-color);
@@ -21,4 +21,18 @@ div.todos{
 }
 div.todo-bg{
   background-color: var(--todo-done-bg-color);
+}
+.todo-done{
+  text-decoration: line-through;
+  text-decoration-thickness: 2px;
+  text-decoration-color: #f66c6c;
+  color: #b27f7f;
+  font-size:1.2rem;
+}
+.todo-not-done{
+  font-weight: bolder;
+  color: #56595f;
+}
+div.todo-border{
+  border-bottom: 2px solid rgba(230, 227, 227, 0.54);
 }
