--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@import "bootstrap/dist/css/bootstrap.css";
+@import "bootstrap/dist/css/bootstrap.min.css";
 @import "primeng/resources/themes/tailwind-light/theme.css";
-@import "primeng/resources/primeng.css";
+@import "primeng/resources/primeng.min.css";
 :root{
   --page-bg-color: #ede7e7;
   --todo-done-bg-color: #faeeee;
