--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("assets/css/lineawesome/css/line-awesome.min.css");
 @import "bootstrap/dist/css/bootstrap.css";
-@import "primeng/resources/themes/tailwind-light/theme.css";
+@import "primeng/resources/themes/bootstrap4-light-blue/theme.css";
 @import "primeng/resources/primeng.min.css";
 :root{
   --page-bg-color: #ede7e7;
@@ -10,7 +10,9 @@
   --top-nav-height: 70px;
   --bg-left-nav: #e7f2fc !important;
 }
-
+.p-button{
+  border-radius: 5px !important;
+}
 body,.bg-gray{
   background-color: var(--page-bg-color);
 }
