--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+PE:wght@100..400&display=swap');
 @import url("assets/css/lineawesome/css/line-awesome.min.css");
 @import "bootstrap/dist/css/bootstrap.css";
 @import "primeng/resources/themes/bootstrap4-light-blue/theme.css";
@@ -9,9 +10,17 @@
   --left-menu-width : 260px;
   --top-nav-height: 70px;
   --bg-left-nav: #e7f2fc !important;
+  --login-primary-bg-color : #1c4e49;
+}
+
+.playwrite-pe-400 {
+  font-family: "Playwrite PE", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 .p-button{
-  border-radius: 5px !important;
+  border-radius: 7px !important;
 }
 body,.bg-gray{
   background-color: var(--page-bg-color);
