refactor : add loading spinner todo

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@
   --left-menu-width : 260px;
   --top-nav-height: 70px;
   --bg-left-nav: #dceaf8 !important;
-  --login-primary-bg-color : #065b43;
+  --login-primary-bg-color : #3ab98c;
 }
 
 .playwrite-pe-400 {
