--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
 }
 
 .playwrite-pe-400 {
-  font-family: "Playwrite PE", cursive;
+  font-family: "Playwrite PE", "Bodoni Bk BT",-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" ,cursive;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
